--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
                     
 					<div class="container" style="padding-top: 40px; padding-bottom: 40px;">
 					<div class="block-heading text-center" style="padding-bottom: 20px;">
-                                <h3 class="content-title">Boot Camp Entrancce </h3>
+                                <h3 class="content-title">Boot Camp Entrance </h3>
                                 <h2 class="block-main-heading text-black">Choose Your Program</h2>
                             </div>
 					<div class="tab-container tab-black tab-center-container">
