--- a/index.html
+++ b/index.html
@@ -421,22 +421,25 @@ s0.parentNode.insertBefore(s1,s0);
                                 <div id="accordion" role="tablist" aria-multiselectable="true">
                                     <div class="card">
                                         <div class="card-header" role="tab" id="headingOne">
-                                            <h5 class="mb-0"><a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne" class="collapsed">CONTENT IN ACCORDIONS</a></h5>
+                                            <h5 class="mb-0"><a data-toggle="collapse" data-parent="#accordion" href="#collapseOne" aria-expanded="false" aria-controls="collapseOne" class="collapsed">Very Affordable Rate</a></h5>
                                         </div>
                                         <div id="collapseOne" class="collapse" role="tabpanel" aria-labelledby="headingOne" aria-expanded="false" style="">
                                             <div class="card-block">
-                                                <p>Indulgence announcing uncommonly met she continuing two unpleasing terminated. Now busy say down the shed eyes roof paid her. Of shameless collected suspicion existence in. Share walls stuff think but the arise guest. Course suffer to do he sussex it window advice. Yet matter enable misery end extent common men should. Her indulgence but assistance favourable cultivated everything collecting.</p>
+                                                <p>We provide a precise knowledge of digital marketing in our session. where we will focus only on the industrial experinece and real challanges and how you can deal with that being a marketing associate of any company.
+We are not providing you the course certification. We will prepare you for real battle that you are going to face in a company.											</p>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="card">
                                         <div class="card-header" role="tab" id="headingTwo">
-                                            <h5 class="mb-0"><a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">SLICK ORGANIZED CONTENT</a></h5>
+                                            <h5 class="mb-0"><a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">Salary You can get</a></h5>
                                         </div>
                                         <div id="collapseTwo" class="collapse" role="tabpanel" aria-labelledby="headingTwo" aria-expanded="false">
                                             <div class="card-block">
-                                                <p>Indulgence announcing uncommonly met she continuing two unpleasing terminated. Now busy say down the shed eyes roof paid her. Of shameless collected suspicion existence in. Share walls stuff think but the arise guest. Course suffer to do he sussex it window advice. Yet matter enable misery end extent common men should. Her indulgence but assistance favourable cultivated everything collecting.</p>
-                                            </div>
+                                                <p>digital marketing is nowa days being very popular course. As marketing is a key of any business and every company wants a marketing person to grow their business. </p>
+                                            
+											<img src=""> </img>
+											</div>
                                         </div>
                                     </div>
                                     <div class="card">
